icon and og image added

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="public/icon.png">
-  <meta property="og:image" content="public/dailylist.png">
+  <link rel="icon" href="%PUBLIC_URL%/icon.png">
+  <meta property="og:image" content="%PUBLIC_URL%/dailylist.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <!--
